kubernetes/apps/tools/token-collector/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-collector
  namespace: tools
  labels:
    app: token-collector
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: token-collector
  template:
    metadata:
      labels:
        app: token-collector
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: token-collector
          image: ghcr.io/boundcorp/token-collector:latest
          command:
            - uvicorn
            - wsgi:application
            - --host
            - "0.0.0.0"
            - --port
            - "8000"
            - --interface
            - wsgi
          ports:
            - containerPort: 8000
              name: http
          env: *app-env
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8000
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 8000
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
