kubernetes/apps/tools/token-collector/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: token-collector
  namespace: tools
spec:
  selector:
    app: token-collector
  ports:
    - port: 80
      targetPort: http
      name: http
